--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <div className="weather">
+  <h2>Day of the Week</h2>
+  <img src="" alt="" />
+  <p><span>conditions: </span>current weather conditions</p>
+  <p><span>time: </span>time of day</p>
+</div>
   </body>
 </html>
